[workspace]
members = [
	"contract-address",
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"kvdb-shared-tests",
	"kvdb-web",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"plain_hasher",
	"rlp",
	"rlp-derive",
	"transaction-pool",
	"trace-time",
	"triehash",
	"uint",
	"parity-util-mem",
	"primitive-types",
	"primitive-types/impls/*",
	"ethereum-types",
	"ethbloom",
	"parity-util-mem/derive"
]

# TODO(xanewok): Remove this once updated `scale-info` is released.
# See https://github.com/paritytech/scale-info/pull/104
[patch.crates-io]
scale-info = { git = "https://github.com/paritytech/scale-info", ref = "43a1fad1eadd73ded1e6808841d5f5be59f347ea" }
