[workspace]
members = [
	"contract-address",
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"kvdb-shared-tests",
	"kvdb-web",
	"parity-bytes",
	"parity-crypto",
	"parity-path",
	"plain_hasher",
	"rlp",
	"rlp-derive",
	"transaction-pool",
	"trace-time",
	"triehash",
	"uint",
	"parity-util-mem",
	"primitive-types",
	"primitive-types/impls/*",
	"ethereum-types",
	"ethbloom",
	"parity-util-mem/derive"
]
